-issue#1953: set_default_action() should warn if more than one action provided
-issue#1973: SpikeKill Menu does not display properly
-issue#1976: Default admin permissions do not allow everything
-issue#1982: Certain hooks should occur within api functions rather than UI functions
-issue#2012: For kernel 3.2+, "Linux - Memory - Free" should grep for "MemAvailable:", not "MemFree:"
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-issue: Verify all Fields not working due to Cacti 1.x upgrade error
-issue: On the Data Sources page, if there is no filtered Device and a Data Source is edited, device association is lost
-feature#122: Support a Site Branch Type
-feature#289: Allow external nologin access for Realtime Graphs
-feature#553: Aggregated graph does not belong to host
-feature#614: Duplicate Data Input Methods
-feature#948: Every time when creating new graph Cacti creates new datasource
-feature#973: Obtain users email and full name from ldap 
-feature#1060: Design Enhancement for Large scale Cacti Implementations
-feature#1347: Update automation logging to work better
-feature#1142: Add Site dropdown to the Graphs and Data Source pages
-feature#1184: Improve Data Input Methods editability and message handling
-feature#1282: Email notification for Automation Network discovery process
-feature#1395: Ensure messages have each new line keep the same prefix in cacti_log()
-feature#1399: Allow 'requires' to include version against a plugin
-feature#1400: User settings should have checkbox to enable overriding of global settings
-feature#1422: Automatically select the next unused data input field when clicking add on data input method
-feature#1428: Graphs: Add more information to error image
-feature#1505: Allow Device Edit from Graphs page